# OmegaMaxEnt

./: CMakeLists.txt  Citation.txt  License.txt  README.md  ReadMe.txt
Download/: README.txt  ReadMe.txt
Talk and papers/: ReadMe.txt
cpp/: CMakeLists.txt  OmegaMaxEnt_data.cpp  OmegaMaxEnt_data.h  OmegaMaxEnt_license.h  OmegaMaxEnt_main.cpp  armadillo_version.txt  generique.cpp  generique.h  graph_2D.cpp  graph_2D.h  graph_3D.cpp  graph_3D.h  includeDef.h
cpp/OmegaMaxEnt.xcodeproj/: project.pbxproj
cpp/OmegaMaxEnt.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cpp/OmegaMaxEnt.xcodeproj/project.xcworkspace/xcuserdata/dom2.xcuserdatad/: UserInterfaceState.xcuserstate
doc/: Analytic contination for spectral functions with non-definite sign.tex  OmegaMaxEnt_User_Guide.tex  spectral_representation_bosons.tex
examples/test_OME/: OmegaMaxEnt_figs_0.py  warnings.txt
test_example/: OmegaMaxEnt_figs_0.py
